src/test/deca/context/invalid/homemade/not_non_bool_op.deca
// Description :
//test of not operation with non boolean operand
//
// Resultats :
//Erreur contextuelle
//Ligne <9> : <Not operand must be boolean but is float>
{
   float a = 2;
   a = !a;

}